# CISCOPy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  requirements.txt
.github/workflows/: ci.yaml
ciiscopy/: __init__.py
ciscopy/: __init__.py  background.py  cme.py  core.py  diagnostics.py  geometry.py  hough.py  io.py  movie.py  pipeline.py  presets.py  process_image.py  sequence.py  sunpy_compat.py  validation.py
tests/: test_geometry.py  test_hough.py  test_pipeline.py
