[build-system]

requires = ["setuptools",
            "wheel"]

[project]
name = "ciscopy"
version = "0.0.1"
dependencies = [
  "numpy>=1.26",
  "astropy>=6.0",
  "ndcube>=2.2",
  "scipy>=1.12",
  "sunpy>=7.0",
  "matplotlib>=3.8",
  "mpl-animators>=1.2.0",
  "reproject>=0.13",
]
requires-python = ">=3.11"
authors = [
    {name = "J. Marcus Hughes", email = "marcus.hughes@swri.org"}
]
maintainers = [
  {name = "J. Marcus Hughes", email = "marcus.hughes@swri.org"}
]
description = "Python tools for CIISCO/CISCO analysis on solar image sequences."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["solar physics", "corona", "cme", "fits", "ndcube"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.optional-dependencies]
test = ["pytest",
        "codespell",
        "coverage",
        "pytest-cov",
        "pre-commit",
        "ruff",
        "hypothesis"]
docs = ["sphinx",
        "codespell",
        "pydata-sphinx-theme",
        "sphinx-autoapi",
        "sphinx-favicon",
        "nbsphinx",
        "ipython",
        "sphinxcontrib-mermaid"]
dev = ["ciscopy[docs,test]"]

[project.urls]
Homepage = "https://github.com/jmbhughes/CISCOPy"
Repository = "https://github.com/jmbhughes/CISCOPy"
"Bug Tracker" = "https://github.com/jmbhughes/CISCOPy/issues"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[tool.codespell]
skip = "*.fts,*.fits,venv,*.pro,*.asdf,*.ipynb"

[tool.ruff]
target-version = 'py311'
exclude = ['tests', 'scripts', 'docs']
line-length=120
lint.select = ["E", "F", "I", "RUF", "UP"]
lint.ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_compatibility = "future"
known_first_party = "ciscopy"
length_sort = false
length_sort_sections = "stdlib"
line_length = 120
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
sections = "FUTURE, COMPATIBILITY, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER"
